# message-outbox

./: .flake8  .gitignore  pyproject.toml
message_outbox/: metadata.py  models.py  repositories.py  schemas.py  services.py  worker.py
